--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           >
           <ul class="wrap-one">
             <li class="first-element">
-              <a href="./index.html" class="header-menu-options">Studio</a>
+              <a href="./index.html" class="header-menu-options current"
+                >Studio</a
+              >
             </li>
             <li class="first-element">
               <a href="" class="header-menu-options">Portfolio</a>
@@ -67,6 +69,9 @@
           <h2 class="visually-hidden">Futures</h2>
           <ul class="wrap">
             <li class="li-for-first-element">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
               <h3 class="section-first-header">Strategy</h3>
               <p class="section-fist-description">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,9 @@
               </p>
             </li>
             <li class="li-for-first-element">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3 class="section-first-header">Punctuality</h3>
               <p class="section-fist-description">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +89,9 @@
               </p>
             </li>
             <li class="li-for-first-element">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3 class="section-first-header">Diligence</h3>
               <p class="section-fist-description">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +99,9 @@
               </p>
             </li>
             <li class="li-for-first-element">
+              <svg class="" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="section-first-header">Technologies</h3>
               <p class="section-fist-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,6 +128,18 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Mark Guerrero</h3>
                 <p class="card-content-profesion">Product Designer</p>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </div>
             </li>
             <li class="our-team-section">
@@ -127,6 +153,18 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
                 <p class="card-content-profesion">Frontend Developer</p>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </div>
             </li>
             <li class="our-team-section">
@@ -140,6 +178,18 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
                 <p class="card-content-profesion">Marketing</p>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </div>
             </li>
             <li class="our-team-section">
@@ -153,6 +203,18 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
                 <p class="card-content-profesion">UI Designer</p>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <svg class="" width="40" height="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
               </div>
             </li>
           </ul>
@@ -262,6 +324,9 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <svg class="" width="" height="">
+        <use href=""></use>
+      </svg>
     </footer>
   </body>
 </html>
