style.css  file

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     <!--------- section 1 ---------->
     <main>
       <section class="order-message">
+        <img
+          src="./images/people-office 1.jpg"
+          alt=""
+          width="1440"
+          height="600"
+          class="picture-people-office"
+        />
         <div class="container">
           <h1 class="text-solution">Effective Solutions for Your Business</h1>
           <button type="button" class="button hover-button">
