--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="order-message">
         <img
           src="./images/people-office 1.jpg"
-          alt=""
+          alt="people-at-the-office"
           width="1440"
           height="600"
           class="picture-people-office"
