style.css  file

--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@
       <section class="section-futures">
         <div class="container">
           <h2 class="visually-hidden">Futures</h2>
+          <div>
+            <ul>
+              <li>
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
           <ul class="wrap">
             <li class="li-for-first-element">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
               <h3 class="section-first-header">Strategy</h3>
               <p class="section-fist-description">
                 Our goal is to identify the business problem to walk away with
