--- a/index.html
+++ b/index.html
@@ -67,17 +67,13 @@
       <section class="section-futures">
         <div class="container">
           <h2 class="visually-hidden">Futures</h2>
-          <div>
-            <ul>
-              <li>
-                <svg class="" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
-                </svg>
-              </li>
-            </ul>
-          </div>
           <ul class="wrap">
             <li class="li-for-first-element">
+              <div>
+                <svg class="icon-antena-first" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-first-header">Strategy</h3>
               <p class="section-fist-description">
                 Our goal is to identify the business problem to walk away with
@@ -85,9 +81,11 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div>
+                <svg class="icon-diagram-second" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-first-header">Punctuality</h3>
               <p class="section-fist-description">
                 Bring the key message to the brand's audience for the best price
@@ -95,9 +93,11 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div>
+                <svg class="icon-antena-third" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-first-header">Diligence</h3>
               <p class="section-fist-description">
                 Research and confirm brands that present the strongest digital
@@ -105,9 +105,11 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <svg class="" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div>
+                <svg class="icon-astronaut-fourth" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-first-header">Technologies</h3>
               <p class="section-fist-description">
                 Design practice focused on digital experiences. We bring forth a
