--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h2 class="visually-hidden">Futures</h2>
           <ul class="wrap">
             <li class="li-for-first-element">
-              <div>
+              <div class="box-for-icons">
                 <svg class="icon-antena-first" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -81,7 +81,7 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <div>
+              <div class="box-for-icons">
                 <svg class="icon-diagram-second" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
@@ -93,7 +93,7 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <div>
+              <div class="box-for-icons">
                 <svg class="icon-antena-third" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
@@ -105,7 +105,7 @@
               </p>
             </li>
             <li class="li-for-first-element">
-              <div>
+              <div class="box-for-icons">
                 <svg class="icon-astronaut-fourth" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
