--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li class="li-for-first-element">
               <div class="box-for-icons">
                 <svg class="icon-diagram-second" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="section-first-header">Punctuality</h3>
@@ -95,7 +95,7 @@
             <li class="li-for-first-element">
               <div class="box-for-icons">
                 <svg class="icon-antena-third" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="section-first-header">Diligence</h3>
