--- a/index.html
+++ b/index.html
@@ -133,22 +133,32 @@
                 height="260"
                 class="picture"
               />
-              <div class="emplyee">
-                <h3 class="card-content-name">Mark Guerrero</h3>
-                <p class="card-content-profesion">Product Designer</p>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </div>
+              <ul class="list-social-media">
+                <li class="li-social-media">
+                  <a href=""></a>
+                  <svg class="icon-social-media" width="40" height="40">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </li>
+                <li class="li-social-media">
+                  <a href=""></a>
+                  <svg class="icon-social-media" width="40" height="40">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </li>
+                <li class="li-social-media">
+                  <a href=""></a>
+                  <svg class="icon-social-media" width="40" height="40">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </li>
+                <li class="li-social-media">
+                  <a href=""></a>
+                  <svg class="icon-social-media" width="40" height="40">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </li>
+              </ul>
             </li>
             <li class="our-team-section">
               <img
@@ -161,18 +171,32 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
                 <p class="card-content-profesion">Frontend Developer</p>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
+                <ul class="list-social-media">
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -186,18 +210,32 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
                 <p class="card-content-profesion">Marketing</p>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
+                <ul class="list-social-media">
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -211,18 +249,32 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
                 <p class="card-content-profesion">UI Designer</p>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                <svg class="" width="40" height="40">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
+                <ul class="list-social-media">
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
