style.css  file

--- a/index.html
+++ b/index.html
@@ -133,32 +133,34 @@
                 height="260"
                 class="picture"
               />
-              <ul class="list-social-media">
-                <li class="li-social-media">
-                  <a href=""></a>
-                  <svg class="icon-social-media" width="40" height="40">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </li>
-                <li class="li-social-media">
-                  <a href=""></a>
-                  <svg class="icon-social-media" width="40" height="40">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </li>
-                <li class="li-social-media">
-                  <a href=""></a>
-                  <svg class="icon-social-media" width="40" height="40">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </li>
-                <li class="li-social-media">
-                  <a href=""></a>
-                  <svg class="icon-social-media" width="40" height="40">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </li>
-              </ul>
+              <div class="cosial-media-container">
+                <ul class="list-social-media">
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href=""></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="our-team-section">
               <img
