style.css  file

--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
                   <li class="li-social-media">
                     <a href=""></a>
                     <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
+                      <use
+                        href="./images/icons.svg#icon-instagram"
+                        class=""
+                      ></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
