--- a/index.html
+++ b/index.html
@@ -133,38 +133,43 @@
                 height="260"
                 class="picture"
               />
-              <div class="cosial-media-container">
-                <ul class="list-social-media">
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use
-                        href="./images/icons.svg#icon-instagram"
-                        class=""
-                      ></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </li>
-                </ul>
+              <div class="emplyee">
+                <h3 class="card-content-name">Mark Guerrero</h3>
+                <p class="card-content-profesion">Product Designer</p>
+                <div class="cosial-media-container">
+                  <ul class="list-social-media">
+                    <li class="li-social-media">
+                      <a href=""></a>
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                          class=""
+                        ></use>
+                      </svg>
+                    </li>
+                    <li class="li-social-media">
+                      <a href=""></a>
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </li>
+                    <li class="li-social-media">
+                      <a href=""></a>
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </li>
+                    <li class="li-social-media">
+                      <a href=""></a>
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
+
             <li class="our-team-section">
               <img
                 src="./images/img-2.jpg"
