--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="cosial-media-container">
                   <ul class="list-social-media">
                     <li class="li-social-media">
-                      <a href=""></a>
+                      <a href="" class="social-link"></a>
                       <svg class="icon-social-media" width="40" height="40">
                         <use
                           href="./images/icons.svg#icon-instagram"
@@ -148,19 +148,19 @@
                       </svg>
                     </li>
                     <li class="li-social-media">
-                      <a href=""></a>
+                      <a href="" class="social-link"></a>
                       <svg class="icon-social-media" width="40" height="40">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </li>
                     <li class="li-social-media">
-                      <a href=""></a>
+                      <a href="" class="social-link"></a>
                       <svg class="icon-social-media" width="40" height="40">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </li>
                     <li class="li-social-media">
-                      <a href=""></a>
+                      <a href="" class="social-link"></a>
                       <svg class="icon-social-media" width="40" height="40">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
