style.css  file

--- a/index.html
+++ b/index.html
@@ -137,15 +137,13 @@
                 <h3 class="card-content-name">Mark Guerrero</h3>
                 <p class="card-content-profesion">Product Designer</p>
                 <div class="cosial-media-container">
-                  <ul class="list-social-media">
+                  <ul>
                     <li class="li-social-media">
-                      <a href="" class="social-link"></a>
-                      <svg class="icon-social-media" width="40" height="40">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                          class=""
-                        ></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="icon-social-media" width="40" height="40">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="li-social-media">
                       <a href="" class="social-link"></a>
@@ -181,32 +179,6 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
                 <p class="card-content-profesion">Frontend Developer</p>
-                <ul class="list-social-media">
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </li>
-                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -220,32 +192,6 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
                 <p class="card-content-profesion">Marketing</p>
-                <ul class="list-social-media">
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </li>
-                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -259,32 +205,6 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
                 <p class="card-content-profesion">UI Designer</p>
-                <ul class="list-social-media">
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </li>
-                  <li class="li-social-media">
-                    <a href=""></a>
-                    <svg class="icon-social-media" width="40" height="40">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </li>
-                </ul>
               </div>
             </li>
           </ul>
