--- a/index.html
+++ b/index.html
@@ -178,6 +178,33 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
                 <p class="card-content-profesion">Frontend Developer</p>
+                <ul>
+                  <li class="li-social-media">
+                    <a href="" class="social-link">
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -191,6 +218,33 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
                 <p class="card-content-profesion">Marketing</p>
+                <ul>
+                  <li class="li-social-media">
+                    <a href="" class="social-link">
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="our-team-section">
@@ -204,6 +258,33 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
                 <p class="card-content-profesion">UI Designer</p>
+                <ul>
+                  <li class="li-social-media">
+                    <a href="" class="social-link">
+                      <svg class="icon-social-media" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="li-social-media">
+                    <a href="" class="social-link"></a>
+                    <svg class="icon-social-media" width="40" height="40">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
