--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <h3 class="card-content-name">Mark Guerrero</h3>
                 <p class="card-content-profesion">Product Designer</p>
 
-                <ul>
+                <ul class="ul-list">
                   <li class="li-social-media">
                     <a href="" class="social-link">
                       <svg class="icon-social-media" width="40" height="40">
