--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 
                 <ul class="ul-list">
                   <li class="li-social-media">
-                    <a href="" class="social-link">
-                      <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
