--- a/index.html
+++ b/index.html
@@ -146,20 +146,20 @@
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
@@ -180,27 +180,27 @@
                 <p class="card-content-profesion">Frontend Developer</p>
                 <ul>
                   <li class="li-social-media">
-                    <a href="" class="social-link">
-                      <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
@@ -220,27 +220,27 @@
                 <p class="card-content-profesion">Marketing</p>
                 <ul>
                   <li class="li-social-media">
-                    <a href="" class="social-link">
-                      <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
@@ -260,27 +260,27 @@
                 <p class="card-content-profesion">UI Designer</p>
                 <ul>
                   <li class="li-social-media">
-                    <a href="" class="social-link">
-                      <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="li-social-media">
-                    <a href="" class="social-link"></a>
-                    <svg class="icon-social-media" width="40" height="40">
+                    <a href="" target="_blank" class="social-link"></a>
+                    <svg class="icon-social-media" width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </li>
