style.css  file

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Tom Ford</h3>
                 <p class="card-content-profesion">Frontend Developer</p>
-                <ul>
+                <ul class="ul-list">
                   <li class="li-social-media">
                     <a href="" target="_blank" class="social-link">
                       <svg class="icon-social-media" width="16" height="16">
@@ -218,7 +218,7 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Camila Garcia</h3>
                 <p class="card-content-profesion">Marketing</p>
-                <ul>
+                <ul class="ul-list">
                   <li class="li-social-media">
                     <a href="" target="_blank" class="social-link">
                       <svg class="icon-social-media" width="16" height="16">
@@ -258,7 +258,7 @@
               <div class="emplyee">
                 <h3 class="card-content-name">Daniel Wilson</h3>
                 <p class="card-content-profesion">UI Designer</p>
-                <ul>
+                <ul class="ul-list">
                   <li class="li-social-media">
                     <a href="" target="_blank" class="social-link">
                       <svg class="icon-social-media" width="16" height="16">
