style.css  file

--- a/index.html
+++ b/index.html
@@ -146,22 +146,25 @@
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -187,22 +190,25 @@
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -227,22 +233,25 @@
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -267,22 +276,25 @@
                     </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="li-social-media">
-                    <a href="" target="_blank" class="social-link"></a>
-                    <svg class="icon-social-media" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
+                    <a href="" target="_blank" class="social-link">
+                      <svg class="icon-social-media" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
