style.css  file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="wrap">
             <li class="li-for-first-element">
               <div class="box-for-icons">
-                <svg class="icon-antena-first" width="64" height="64">
+                <svg class="icon-diagram-second" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
