style.css  file

--- a/index.html
+++ b/index.html
@@ -303,18 +303,25 @@
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="list-our-portfolio">
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-5n.jpg"
-                alt="banking-app-mokeup"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">Banking App</h3>
-                <p class="card-content-profesion">App</p>
-              </div>
-            </li>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-5n.jpg"
+                  alt="banking-app-mokeup"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">Banking App</h3>
+                  <p class="card-content-profesion">App</p>
+                </div>
+              </li>
+            </div>
             <div class="tumba">
               <li class="li-our-portfolio">
                 <img
@@ -323,66 +330,102 @@
                   width="360"
                   height="300"
                 />
-                <p class="new-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
                 <div class="portfolio-wrap">
                   <h3 class="section-four-mokeup-description">
                     Cashless Payment
                   </h3>
                   <p class="card-content-profesion">Marketing</p>
                 </div>
+              </li>
             </div>
-            </li>
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-7.jpg"
-                alt="meditation app mokeup"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">Meditation App</h3>
-                <p class="card-content-profesion">App</p>
-              </div>
-            </li>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-7.jpg"
+                  alt="meditation app mokeup"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">
+                    Meditation App
+                  </h3>
+                  <p class="card-content-profesion">App</p>
+                </div>
+              </li>
+            </div>
 
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-8.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">Taxi Service</h3>
-                <p class="card-content-profesion">Marketing</p>
-              </div>
-            </li>
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">
-                  Screen Illustrations
-                </h3>
-                <p class="card-content-profesion">Design</p>
-              </div>
-            </li>
-            <li class="li-our-portfolio">
-              <img
-                src="./images/img-10.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="portfolio-wrap">
-                <h3 class="section-four-mokeup-description">Online Courses</h3>
-                <p class="card-content-profesion">Marketing</p>
-              </div>
-            </li>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-8.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">Taxi Service</h3>
+                  <p class="card-content-profesion">Marketing</p>
+                </div>
+              </li>
+            </div>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">
+                    Screen Illustrations
+                  </h3>
+                  <p class="card-content-profesion">Design</p>
+                </div>
+              </li>
+            </div>
+            <div class="tumba">
+              <li class="li-our-portfolio">
+                <img
+                  src="./images/img-10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <div class="portfolio-wrap">
+                  <h3 class="section-four-mokeup-description">
+                    Online Courses
+                  </h3>
+                  <p class="card-content-profesion">Marketing</p>
+                </div>
+              </li>
+            </div>
           </ul>
         </div>
         <!-- </div> -->
