style.css  file

--- a/index.html
+++ b/index.html
@@ -305,17 +305,19 @@
           <ul class="list-our-portfolio">
             <div class="tumba">
               <li class="li-our-portfolio">
-                <img
-                  src="./images/img-5n.jpg"
-                  alt="banking-app-mokeup"
-                  width="360"
-                  height="300"
-                />
-                <p class="new-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
-                </p>
+                <div class="image-div">
+                  <img
+                    src="./images/img-5n.jpg"
+                    alt="banking-app-mokeup"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="new-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrap">
                   <h3 class="section-four-mokeup-description">Banking App</h3>
                   <p class="card-content-profesion">App</p>
