style.css  file

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="list-our-portfolio">
-            <div class="tumba">
+            <div class="thumba">
               <li class="li-our-portfolio">
                 <div class="image-div">
                   <img
@@ -332,6 +332,7 @@
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
+               </div>  
                 <div class="portfolio-wrap">
                   <h3 class="section-four-mokeup-description">
                     Cashless Payment
@@ -339,8 +340,8 @@
                   <p class="card-content-profesion">Marketing</p>
                 </div>
               </li>
-            </div>
-            <div class="tumba">
+            
+            <div class="thumba">
               <li class="li-our-portfolio">
                 <img
                   src="./images/img-7.jpg"
@@ -357,7 +358,7 @@
               </li>
             </div>
 
-            <div class="tumba">
+            <div class="thumba">
               <li class="li-our-portfolio">
                 <img
                   src="./images/img-8.jpg"
@@ -371,7 +372,7 @@
                 </div>
               </li>
             </div>
-            <div class="tumba">
+            <div class="thumba">
               <li class="li-our-portfolio">
                 <img
                   src="./images/img-9.jpg"
@@ -387,7 +388,7 @@
                 </div>
               </li>
             </div>
-            <div class="tumba">
+            <div class="thumba">
               <li class="li-our-portfolio">
                 <img
                   src="./images/img-10.jpg"
