--- a/index.html
+++ b/index.html
@@ -321,17 +321,20 @@
             </div>
             <div class="tumba">
               <li class="li-our-portfolio">
-                <img
-                  src="./images/img-6.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <p class="new-text">
+               <div class="image-color-wrapper">
+                  <img
+                    src="./images/img-6.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                      <p class="new-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
+               </div>
+            
                </div>  
                 <div class="portfolio-wrap">
                   <h3 class="section-four-mokeup-description">
