style.css  file

--- a/index.html
+++ b/index.html
@@ -303,44 +303,41 @@
         <div class="container">
           <h2 class="our-portfolio">Our Portfolio</h2>
           <ul class="list-our-portfolio">
-            <div class="thumba">
-              <li class="li-our-portfolio">
-                <div class="double-items-wrap">
-                  <img
-                    src="./images/img-5n.jpg"
-                    alt="banking-app-mokeup"
-                    width="360"
-                    height="300"
-                  />
-                  <p class="new-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-wrap">
-                  <h3 class="section-four-mokeup-description">Banking App</h3>
-                  <p class="card-content-profesion">App</p>
-                </div>
-              </li>
-            </div>
-            <div class="thumba">
-              <li class="li-our-portfolio">
-                <div class="double-items-wrap">
-                  <img
-                    src="./images/img-6.jpg"
-                    alt="Cashless Payment"
-                    width="360"
-                    height="300"
-                  />
-                  <p class="new-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-              </li>
-            </div>
+            <li class="li-our-portfolio">
+              <div class="double-items-wrap">
+                <img
+                  src="./images/img-5n.jpg"
+                  alt="banking-app-mokeup"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-wrap">
+                <h3 class="section-four-mokeup-description">Banking App</h3>
+                <p class="card-content-profesion">App</p>
+              </div>
+            </li>
+
+            <li class="li-our-portfolio">
+              <div class="double-items-wrap">
+                <img
+                  src="./images/img-6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="new-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+            </li>
 
             <div class="portfolio-wrap">
               <h3 class="section-four-mokeup-description">Cashless Payment</h3>
