--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
                   · Cloud Storage App
                 </p>
               </div>
+              <div class="portfolio-wrap">
+                <h3 class="section-four-mokeup-description">
+                  Cashless Payment
+                </h3>
+                <p class="card-content-profesion">Marketing</p>
+              </div>
             </li>
-
-            <div class="portfolio-wrap">
-              <h3 class="section-four-mokeup-description">Cashless Payment</h3>
-              <p class="card-content-profesion">Marketing</p>
-            </div>
-            <!-- </li> -->
 
             <li class="li-our-portfolio">
               <div class="double-items-wrap">
