style.css  file

--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
         <svg class="" width="" height="">
           <use href=""></use>
         </svg>
-        <div class="">
+        <div class="container-for-icons">
           <p class="social-media-footer">Social media</p>
-          <ul class="ul-list">
-            <li class="li-social-media">
-              <a href="" target="_blank" class="social-link">
+          <ul class="ul-list-footer">
+            <li class="li-social-media-footer">
+              <a href="" target="_blank" class="social-link-footer">
                 <svg class="icon-social-media" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
