style.css  file

--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
         <!-- </div> -->
       </section>
     </main>
-    <div class="container-two">
-      <footer class="footer-section">
-        <div class="container">
+    <footer class="footer-section"></footer>
+     <div class="container-two container">
+        <div class="container-one">
           <a href="./index.html" class="footer-web"
             >Web<span class="footer-studio">Studio</span></a
           >
@@ -475,7 +475,7 @@
             </li>
           </ul>
         </div>
-      </footer>
-    </div>
+     </div>
+    </footer>
   </body>
 </html>
