style.css  file

--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
         <!-- </div> -->
       </section>
     </main>
-    <footer class="footer-section"></footer>
-     <div class="container-two container">
+    <footer class="footer-section">
+      <div class="container-two container">
         <div class="container-one">
           <a href="./index.html" class="footer-web"
             >Web<span class="footer-studio">Studio</span></a
@@ -475,7 +475,7 @@
             </li>
           </ul>
         </div>
-     </div>
+      </div>
     </footer>
   </body>
 </html>
